<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/backgr_dialog"
    android:orientation="vertical"
    android:paddingVertical="10dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/on_two_factor"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/tv_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/key"
        android:inputType="none"
        android:focusable="true"
        android:background="@null"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_url"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/otp"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/edtOTP"
            android:layout_width="200dp"
            android:layout_height="match_parent"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="#C5C5C5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#f00"
            android:text="@string/no" />

        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#3478F6"
            android:text="@string/yes" />
    </LinearLayout>
</LinearLayout>
